test/langtools/tools/javac/ImplicitClass/ImplicitClassRecovery.out
ImplicitClassRecovery.java:7:33: compiler.err.expected: ';'
1 error
